force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/Partner_Shared_Solar_System_Eligibility__c.object-meta.xml
<CustomObject>
    <description>Control partner access to Shared Solar Systems</description>
    <label>Partner Shared Solar System Access</label>
    <nameField>
        
        <displayFormat>PSSA-{0000}</displayFormat>
        
        <label>Partner Shared Solar System Access Name</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Partner Shared Solar System Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>