force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Partner Account</inlineHelpText>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account must have a record type of Partner Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Partner_Shared_Solar_System_Accesses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>