force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Commission Structure that applies when a partner acquires customers for this Shared Solar System</inlineHelpText>
    <label>Commission Structure</label>
    <referenceTo>Commission_Structure__c</referenceTo>
    <relationshipLabel>Partner Shared Solar System</relationshipLabel>
    <relationshipName>Partner_Shared_Solar_System_Accesses</relationshipName>
    <type>Lookup</type>
</CustomField>