force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date after which this record ceases to be active</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>