force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND( TODAY() &gt;= Start_Date__c,
     OR(ISBLANK(End_Date__c), TODAY() &lt;= End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked, if today is between the start and end date (or end date is blank). Once active, this record is locked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>