force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <inlineHelpText>Shared Solar System that the partner is eligible to sell</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Eligible Partners</relationshipLabel>
    <relationshipName>Partner_Shared_Solar_System_Accesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>