force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date on which this record begins to be active</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>