force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/validationRules/Record_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( OR(ISCHANGED( Commission_Structure__c ), 
         AND(ISCHANGED( Start_Date__c ), NOT(ISBLANK(PRIORVALUE(Start_Date__c)))),
         AND(NOT(IsActive__c), PRIORVALUE(IsActive__c)),
         ISCHANGED( Account__c ) ,
         ISCHANGED( Shared_Solar_System__c ),
         /* Since the end date can change, but it shouldn&apos;t make the current day inactive */
         AND(ISCHANGED( End_Date__c ), End_Date__c &lt; TODAY())), 
      PRIORVALUE(Start_Date__c) &lt;= TODAY()
)</errorConditionFormula>
    <errorMessage>This record is locked because it is, or was, active. To change it, set an end date to today, and create a new one.</errorMessage>
</ValidationRule>