force-app/main/default/objects/Partner_Shared_Solar_System_Eligibility__c/validationRules/Required_Commission_Structure.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Commission_Structure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Commission_Structure__c ), 
NOT( Partner_Name__c = &apos;BlueWave Inside Sales&apos;),
NOT( Partner_Name__c = &apos;BlueWave Test Partner&apos;),
NOT( Partner_Name__c = &apos;Perch Inside Sales&apos;),
NOT( Partner_Name__c = &apos;Perch Test Partner&apos;),
NOT( Partner_Name__c = &apos;Placeholder Partner&apos;),
NOT( $Profile.Name = &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>Commission Structure is required.</errorMessage>
</ValidationRule>